# mlx-harness

./: Dockerfile.sandbox  README.md  SPEC.md  pyproject.toml
src/harnessthing/: __main__.py  agent.py  config.py  events.py  executor.py  tui.py
src/mlxharness/: __main__.py  a2a.py  agent.py  bus.py  config.py  engine.py  events.py  executor.py  orchestrator.py  tools.py  tui.py  tui.tcss
tests/: conftest.py
tests/e2e/: conftest.py  test_e2e.py
tests/unit/: test_a2a.py  test_agent.py  test_bus.py  test_config.py  test_executor.py  test_orchestrator.py  test_scheduler.py  test_tools.py  test_tui.py
