[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harnessthing"
version = "0.1.0"
description = "A minimal, single-process AI coding agent powered by MLX on Apple Silicon"
requires-python = ">=3.11"
dependencies = [
    "mlx-lm>=0.31.2",
]

[project.scripts]
harnessthing = "harnessthing.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "e2e: end-to-end tests requiring model and Docker (deselect with '-m \"not e2e\"')",
]
